...
                          type: "install-app",
                          appId: detail.appId,
                          forcePath: "hyperdrive",
                        })
                      }
                    >
                      <Text style={styles.buttonLabel}>DHT</Text>
                    </Pressable>
                    {detail.resourceAvailable ? (
                      <Pressable
                        testID={`install-resource-${detail.appId}`}
                        style={styles.smallButton}
                        onPress={() =>
...
