appId: network.twistedpear.harness
---
- launchApp:
    clearState: true
- tapOn:
    id: "create-identity"
- tapOn:
    id: "tcp-client-switch"
- extendedWaitUntil:
    visible: "Link: online"
    timeout: 60000
- extendedWaitUntil:
    visible: "com.twistedpear.example"
    timeout: 60000
- tapOn:
    text: "com.twistedpear.example"
- tapOn:
    text: "DHT"
- extendedWaitUntil:
    visible: "hyperdrive"
    timeout: 120000
- extendedWaitUntil:
    visible: "complete"
    timeout: 120000
- assertVisible:
    id: "install-progress"
