appId: network.twistedpear.harness
---
- launchApp
- tapOn:
    id: "create-identity"
- tapOn:
    id: "tcp-client-switch"
- extendedWaitUntil:
    visible: "com.twistedpear.example"
    timeout: 60000
- tapOn:
    text: "com.twistedpear.example"
- tapOn:
    text: "Resource"
- extendedWaitUntil:
    visible: "resource"
    timeout: 120000
- assertVisible:
    id: "install-progress"
